--- a/WalletUDo/build.gradle
+++ b/WalletUDo/build.gradle
@@ -102,9 +102,12 @@ dependencies {
     compile "com.android.support:cardview-v7:$androidSupportVersion"
     compile "com.android.support:recyclerview-v7:$androidSupportVersion"
 
+    def googlePlayServiceVersion = '7.0.0'
+
     // Google Drive API
-    compile 'com.google.android.gms:play-services-identity:6.5.87'
-    compile 'com.google.android.gms:play-services-drive:6.5.87'
+    compile 'com.google.android.gms:play-services-identity:' + googlePlayServiceVersion
+    compile 'com.google.android.gms:play-services-drive:' + googlePlayServiceVersion
+    compile 'com.google.android.gms:play-services-ads:' + googlePlayServiceVersion
 
     // Retrofit
     compile 'com.squareup.retrofit:retrofit:1.9.0'
