--- a/WalletUDo/src/main/AndroidManifest.xml
+++ b/WalletUDo/src/main/AndroidManifest.xml
@@ -118,5 +118,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.walletudo.ui.dashboard.DashboardActivity" />
         </activity>
+
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent" />
     </application>
 </manifest>
